--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -39,7 +39,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#login">
+                    <a href="https://github.com/2141144AbigailSmith/DBMS-HR-management-/blob/main/login/login.html">
                         Login
                     </a>
                 </li>
